kiên/reply comment, setup socket server, vote for reply and comment,emoji pciker, CRUD emoji

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -154,3 +154,7 @@
   scrollbar-color: #9ca3af transparent;
 }
 
+.search input {
+  background-color: #fff !important;
+  color: red !important;
+}
